--- a/request-history-2.html
+++ b/request-history-2.html
@@ -91,7 +91,7 @@
 	<!-- Main Page Wrapper -->
   <div role="main" id="main" class="clearfix">
 		<div id="request-history" class="squared-box clearfix">
-			<h1 class="box-title"><span>MY REQUEST HISTORY</span></h1>
+			<h1 class="box-title"><span>PREVIOUS REQUESTS</span></h1>
 			<fieldset class="date-manager">
 				<a href="#" class="left-selector"> &nbsp; </a>
 				<a href="#" class="right-selector"> &nbsp; </a>
