--- a/request-history.html
+++ b/request-history.html
@@ -40,7 +40,6 @@
 	<!-- Use this in all pages -->
 	<script src="js/libs/modernizr-2.5.3.min.js"></script>
   <script src="js/jquery-1.7.2.min.js"></script>
-  
 
 </head>
 <body>
@@ -91,7 +90,7 @@
 	<!-- Main Page Wrapper -->
   <div role="main" id="main" class="clearfix">
 		<div id="request-history" class="squared-box clearfix">
-			<h1 class="box-title"><span>MY REQUEST HISTORY</span></h1>
+			<h1 class="box-title"><span>PREVIOUS REQUESTS</span></h1>
 			<fieldset class="date-manager">
 				<a href="#" class="left-selector"> &nbsp; </a>
 				<a href="#" class="right-selector"> &nbsp; </a>
