--- a/request-history.html
+++ b/request-history.html
@@ -322,7 +322,7 @@
 	      "status": "open" // default initial selected item
 	  };
 	  var defaultHistoryParams = {
-	      "yearsToShow": 					[2010, 2011, 2012],
+	      "yearsToShow": 					[2008, 2009, 2010, 2011, 2012],
 	      "dateElement": 					$(".date-manager"),
 	      "filtersElement": 			$(".filters"),
 	      "filterTypeElement": 		$("#serviceRequestType"),
