--- a/request-history-1.html
+++ b/request-history-1.html
@@ -43,7 +43,7 @@
   
 
 </head>
-<body>
+<body class="signed-in">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_graphite_burst.png" >
