--- a/request-history.html
+++ b/request-history.html
@@ -42,7 +42,7 @@
   <script src="js/jquery-1.7.2.min.js"></script>
 
 </head>
-<body>
+<body class="signed-in">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_graphite_burst.png" >
