--- a/select-a-lease.html
+++ b/select-a-lease.html
@@ -54,7 +54,7 @@
   <!-- end scripts -->
 
 </head>
-<body class="select-a-lease">
+<body class="narrow-width">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_1.jpg" >
