--- a/select-lease.html
+++ b/select-lease.html
@@ -51,7 +51,7 @@
   <!-- end scripts -->
 
 </head>
-<body class="signin">
+<body class="medium-width">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_1.jpg" >
