--- a/we-sent-you-email.html
+++ b/we-sent-you-email.html
@@ -18,14 +18,15 @@
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
 
- <!-- Use this in all pages -->
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
+
   <link rel="stylesheet" href="css/reset.css"> <!-- Eric Meyer Stylesheet -->
   <link rel="stylesheet" href="css/style.css"> <!-- Default Stylesheet -->
-  <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages -->
+  <link rel="stylesheet" href="css/globalTHintegration.css">
+  <link rel="stylesheet" href="css/fonts.css"> <!-- Added Styles For All Pages -->
+  <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/forms.css">
-  <link rel="stylesheet" href="css/accordion.css">
-  <link rel="stylesheet" href="css/fonts.css">
 	<!--[if lt IE 9]>
 	  <link rel="stylesheet" href="css/ie.css">
 	<![endif]-->
@@ -33,25 +34,32 @@
 	  <link rel="stylesheet" href="css/ie9.css">
 	<![endif]-->
 	
-  <!-- Use this in all pages -->
+  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
+
+  <!-- All JavaScript at the bottom, except this Modernizr build.
+       Modernizr enables HTML5 elements & feature detects for optimal performance.
+       Create your own custom Modernizr build: www.modernizr.com/download/ -->
   <script src="js/libs/modernizr-2.5.3.min.js"></script>
-  <script src="js/jquery-1.7.2.min.js"></script>
+
+  <!-- JavaScript in the header so my other stuff doesn't break -->
+
+  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script src="js/ui/jquery-ui-1.8.20.custom.js"></script>
-  <script src="js/jquery-bbq.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/browserimage.js"></script>
-  <script src="js/nav.js"></script>
-  
+  <script src="http://cachedcommons.org/cache/jquery-bbq/1.2.1/javascripts/jquery-bbq.js"></script>
+
   <!-- scripts concatenated and minified via build script -->
   <script src="js/jquery.cookie.js"></script>
+	<script src="js/browserimage.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/script.js"></script>
   <script src="js/yearpicker.js"></script>
   <script src="js/servicerequest.js"></script>
 
   <!-- end scripts -->
 
 </head>
-<body class="signin">
+<body class="medium-width">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_1.jpg" >
@@ -69,7 +77,7 @@
 		<div id="signin" class="titled-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div class="body-font-14">				
+			<div >				
 					<h1>We sent you an email</h1>
 					<p>
 						In the next few minutes you'll receive a link to reset your password.<br>
@@ -81,7 +89,7 @@
 						555-555-5555 or email@archstone.com.
 					</p>
 					<div class="backtosignin">
-						<a href=""><img src="images/icon_back_arrow_teal.png"> Back to sign in</a>
+						<a href="">< Back to sign in</a>
 					</div>
 			</div>
 			<p class="box-footer"><span></span></p>
