--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
 		
   </div>
   <footer>
-		<div class="navigation">
+		<div class="right">
 			<a href="/">ArchstoneApartments.com</a>
 		</div>
-		<div class="copyright">
+		<div class="left-one-row">
 				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
 				<a href="#">Privacy Policy</a>
 		</div>
