--- a/register.html
+++ b/register.html
@@ -96,10 +96,10 @@
 		
   </div>
   <footer>
-		<div class="navigation">
+		<div class="right">
 			<a href="#">Privacy Policy</a>  |  <a href="/">ArchstoneApartments.com</a>
 		</div>
-		<div class="copyright">
+		<div class="left-one-row">
 			<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a>
 		</div>
   </footer>
