--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
 		
   </div>
 <footer>
-  <div class="navigation">
+  <div class="right">
    <a href="/">ArchstoneApartments.com</a>
   </div>
-  <div class="copyright">
+  <div class="left">
     <a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
     <a href="#">Privacy Policy</a>
   </div>
