--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <div class="right">
    <a href="/">ArchstoneApartments.com</a>
   </div>
-  <div class="left">
+  <div class="left-one-row">
     <a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
     <a href="#">Privacy Policy</a>
   </div>
