new style for back to sign in.  Also javascript integration.

--- a/forgot-your-password.html
+++ b/forgot-your-password.html
@@ -86,7 +86,7 @@
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Send me the link</span><span class="end"> &nbsp; </span></button>
 					</div>
-					<div class="backtosignin">
+					<div class="back-to-sign-in">
 						<a href="">< Back to sign in</a>
 					</div>					
 				</form>
