--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
 		</div>
 		
   </div>
-<footer>
-  <div class="navigation">
-   <a href="/">ArchstoneApartments.com</a>
-  </div>
-  <div class="copyright">
-    <a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
-    <a href="#">Privacy Policy</a>
-  </div>
-</footer>
+  <footer>
+		<div class="right">
+			<a href="/">ArchstoneApartments.com</a>
+		</div>
+		<div class="left-one-row">
+				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
+				<a href="#">Privacy Policy</a>
+		</div>
+  </footer>
 	<!-- Use this in all pages -->
   <script src="js/ui/jquery-ui-1.8.20.custom.js"></script>
   <script src="js/jquery-bbq.js"></script>
