--- a/request-history.html
+++ b/request-history.html
@@ -289,15 +289,11 @@
   </div>
   <footer>
 		<div class="right">
-			<a href="dialog-email.html" class="cta-dialog" rel="footer" title="Contact Us">Contact Us</a>
+			<a href="/">ArchstoneApartments.com</a>
 		</div>
 		<div class="left">
-			<p>Champions Park  |  2525 E. 104th Ave., Thornton, CO 80233  |  (866) 914-9716</p>
-			<p>
 				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
-				<a href="#">Privacy Policy</a> | 
-				<a href="/">ArchstoneApartments.com</a>
-			</p>
+				<a href="#">Privacy Policy</a>
 		</div>
   </footer>
 
