--- a/reset-your-password.html
+++ b/reset-your-password.html
@@ -94,7 +94,7 @@
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Continue</span><span class="end"> &nbsp; </span></button>
 					</div>
-					<div class="backtosignin">
+					<div class="back-to-sign-in">
 						<a href="">< Back to sign in</a>
 					</div>					
 				</form>
