--- a/something-went-wrong.html
+++ b/something-went-wrong.html
@@ -79,10 +79,9 @@
 						Your leasing office can better help you at:<br>
 						555-555-5555 or email@archstone.com.
 					</p>
-					<div class="backtosignin">
-						<a href=""><img src="images/icon_back_arrow_teal.png"> Back to sign in</a>
-					</div>
-			</div>
+					<div class="back-to-sign-in">
+						<a href=""><img src="images/icon_back_arrow_teal.png"><span class="sign-in-text">Back to sign in</span></a>
+					</div></div>
 			<p class="box-footer"><span></span></p>
 		</div>
 		
