--- a/choose-new-password.html
+++ b/choose-new-password.html
@@ -97,7 +97,7 @@
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Use this password and sign in</span><span class="end"> &nbsp; </span></button>
 					</div>
-					<div class="backtosignin">
+					<div class="back-to-sign-in">
 						<a href="">< Back to sign in</a>
 					</div>					
 				</form>
