--- a/we-sent-you-email.html
+++ b/we-sent-you-email.html
@@ -88,7 +88,7 @@
 						If you have an issue or don't receive the password email, contact your leasing office at:<br>
 						555-555-5555 or email@archstone.com.
 					</p>
-					<div class="backtosignin">
+					<div class="back-to-sign-in">
 						<a href="">< Back to sign in</a>
 					</div>
 			</div>
