--- a/activation-email-sent.html
+++ b/activation-email-sent.html
@@ -56,10 +56,10 @@
 		</div>
 	</header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="titled-box clearfix">
+		<div id="signin" class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div class="body-font-14">
+			<div class="body-font-14 padded">
 					<h1>Activation Email Sent</h1>
 					<p>
 						In the next few minutes you'll receive an activation email from utopia.<br>
