--- a/dont-have-account.html
+++ b/dont-have-account.html
@@ -55,10 +55,10 @@
 		</div>
 </header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="titled-box clearfix">
+		<div id="signin" class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div >
+			<div class="padded body-font-14">
 				<form method="POST" action="select-a-lease.html">
 					<h1>Dont have an account?</h1>
 					<p class="form-note">Please fill out the following information and we'll send you an email to activate your account</p>
