javascript and style integration.

--- a/something-went-wrong.html
+++ b/something-went-wrong.html
@@ -71,7 +71,8 @@
 					</p>
 					<div class="back-to-sign-in">
 						<a href=""><img src="images/icon_back_arrow_teal.png"><span class="sign-in-text">Back to sign in</span></a>
-					</div></div>
+					</div>
+				</div>
 			<p class="box-footer"><span></span></p>
 		</div>
 		
