style fixes to backtosignin

--- a/choose-new-password.html
+++ b/choose-new-password.html
@@ -81,8 +81,8 @@
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Use this password and sign in</span><span class="end"> &nbsp; </span></button>
 					</div>
-					<div class="back-to-sign-in">
-						<a href="/"><img src="images/icon_back_arrow_teal.png"><span class="sign-in-text">Back to sign in</span></a>
+					<div class="backtosignin">
+						<a href="/"><img src="images/icon_back_arrow_teal.png"> Back to sign in</a>
 					</div>					
 				</form>
 			</div>
