--- a/choose-new-password.html
+++ b/choose-new-password.html
@@ -105,18 +105,20 @@
 			<p class="box-footer"><span></span></p>
 		</div>
 		
-		<div class="photo-box left clearfix">
-			<p><strong>OPTIONAL</strong><br/>MARKETING<br/>REAL<br/>ESTATE</p>
-			<img src="images/puppy.png">
-		</div>
-		
-		<div class="titled-box left clearfix small-box titled-box-right">
-			<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
-			<div class="body clearfix">
-				<a href="#" class="button-droid"> &nbsp; </a>
-				<a href="#" class="button-iphone"> &nbsp; </a>
+		<div class="marketing-boxes">
+			<div class="photo-box left clearfix">
+				<p><strong>OPTIONAL</strong><br/>MARKETING<br/>REAL<br/>ESTATE</p>
+				<img src="images/puppy.png">
 			</div>
-			<p class="box-footer"><span></span></p>
+		
+			<div class="titled-box left clearfix small-box titled-box-right">
+				<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
+				<div class="body clearfix">
+					<a href="#" class="button-droid"> &nbsp; </a>
+					<a href="#" class="button-iphone"> &nbsp; </a>
+				</div>
+				<p class="box-footer"><span></span></p>
+			</div>
 		</div>
 		
   </div>
