--- a/choose-new-password.html
+++ b/choose-new-password.html
@@ -57,7 +57,7 @@
   <div role="main" id="main" class="clearfix">
 		<div id="signin" class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
-			<div class="padded">
+			<div class="padded clearfix">
 				<form method="POST" action="select-a-lease.html">
 					<h3 class="discreet">Choose your new password</h3>
 					<ul class="form-with-validation">
