fixing html validation errors

--- a/activation-email-sent.html
+++ b/activation-email-sent.html
@@ -44,7 +44,7 @@
 <body class="medium-width">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_1.jpg" >
+		<img class="source-image" src="images/bkgd_1.jpg" alt="Archstone">
   	</div>
 	<!-- MJ: This needs to be here to resize this before the page finishes loading instead of after -->
 	<script src="js/browserimage.js"></script>
@@ -52,7 +52,7 @@
 	<header>
 		<!-- Primary Navigation -->
 		<div class="primary-nav-contents">
-			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
+			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 		</div>
 	</header>
   <div role="main" id="main" class="clearfix">
@@ -78,8 +78,8 @@
 		</div>
 		
 		<div class="photo-box left clearfix">
-			<p><strong>OPTIONAL</strong><br/>MARKETING<br/>REAL<br/>ESTATE</p>
-			<img src="images/puppy.png">
+			<p><strong>OPTIONAL</strong><br>MARKETING<br>REAL<br>ESTATE</p>
+			<img src="images/puppy.png" alt="marketing message">
 		</div>
 		
 		<div class="titled-box left clearfix small-box titled-box-right">
