--- a/choose-new-password.html
+++ b/choose-new-password.html
@@ -44,14 +44,14 @@
 <body class="medium-width">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_1.jpg" >
+		<img class="source-image" src="images/bkgd_1.jpg" alt="Archstone">
   </div>
 	<!-- MJ: This needs to be here to resize this before the page finishes loading instead of after -->
 	<script src="js/browserimage.js"></script>
 
   <header>
 		<div class="primary-nav-contents">
-			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
+			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 		</div>
 </header>
   <div role="main" id="main" class="clearfix">
@@ -81,7 +81,7 @@
 						<button type="submit" class="submit"><span>Use this password and sign in</span><span class="end"> &nbsp; </span></button>
 					</div>
 					<div class="backtosignin">
-						<a href="/"><img src="images/icon_back_arrow_teal.png"> Back to sign in</a>
+						<a href="/"><img src="images/icon_back_arrow_teal.png" alt="Back to sign in"> Back to sign in</a>
 					</div>					
 				</form>
 			</div>
@@ -89,8 +89,8 @@
 		
 		<div class="marketing-boxes">
 			<div class="photo-box left clearfix">
-				<p><strong>OPTIONAL</strong><br/>MARKETING<br/>REAL<br/>ESTATE</p>
-				<img src="images/puppy.png">
+				<p><strong>OPTIONAL</strong><br>MARKETING<br>REAL<br>ESTATE</p>
+				<img src="images/puppy.png" alt="marketing message">
 			</div>
 
 			<div class="titled-box left clearfix small-box titled-box-right">
