--- a/register.html
+++ b/register.html
@@ -51,12 +51,12 @@
 <body class="signed-in register">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_graphite_burst.png" >
+		<img class="source-image" src="images/bkgd_graphite_burst.png" alt="Archstone">
   </div>
 	<script type="text/javascript">global.background.init(); </script><!-- This needs to be here to resize this before the page finishes loading instead of after -->
   <header>
 		<div class="primary-nav-contents">
-			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
+			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 			<ul class="primary-nav">
 				<li><a href="request-history.html" title="Contact Us">Previous Requests</a></li>
 				<li><a href="service-request.html" title="Contact Us">Service Request</a></li>
