--- a/service-request.html
+++ b/service-request.html
@@ -46,13 +46,13 @@
 <body class="signed-in service-request">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_graphite_burst.png" >
+		<img class="source-image" src="images/bkgd_graphite_burst.png" alt="Archstone">
   </div>
 	<script type="text/javascript">global.background.init(); </script>
   <header>
 		<!-- Primary Navigation -->
 		<div class="primary-nav-contents">
-			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
+			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 			<ul class="primary-nav">
 				<li><a href="#" title="Contact Us">Payment</a></li>
 				<li class="active"><a href="service-request.html">Service</a></li>
