--- a/request-sent.html
+++ b/request-sent.html
@@ -51,13 +51,13 @@
 <body class="signed-in request-sent">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_graphite_burst.png" >
+		<img class="source-image" src="images/bkgd_graphite_burst.png" alt="Archstone">
   </div>
 	<script type="text/javascript">global.background.init(); </script><!-- This needs to be here to resize this before the page finishes loading instead of after -->
   <header>
 		<!-- Primary Navigation -->
 		<div class="primary-nav-contents">
-			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
+			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 			<ul class="primary-nav">
 				<li><a href="#" title="Contact Us">Payment</a></li>
 				<li class="active"><a href="service-request.html">Service</a></li>
