--- a/reset-your-password.html
+++ b/reset-your-password.html
@@ -62,7 +62,7 @@
 <body class="medium-width">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_1.jpg" >
+		<img class="source-image" src="images/bkgd_1.jpg" alt="Archstone">
   </div>
 	<script type="text/javascript">Background.init(); </script>
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
@@ -70,7 +70,7 @@
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
 		<div class="primary-nav-contents">
-			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
+			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 		</div>
 </header>
   <div role="main" id="main" class="clearfix">
@@ -103,8 +103,8 @@
 		</div>
 		
 		<div class="photo-box left clearfix">
-			<p><strong>OPTIONAL</strong><br/>MARKETING<br/>REAL<br/>ESTATE</p>
-			<img src="images/puppy.png">
+			<p><strong>OPTIONAL</strong><br>MARKETING<br>REAL<br>ESTATE</p>
+			<img src="images/puppy.png" alt="marketing message">
 		</div>
 		
 		<div class="titled-box left clearfix small-box titled-box-right">
