make-onetime-payment.html

--- a/request-history.html
+++ b/request-history.html
@@ -51,18 +51,7 @@
 	<script src="js/browserimage.js"></script>
 
   <header>
-		<!-- Primary Navigation -->
-		<div class="primary-nav-contents">
-			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
-			<ul class="primary-nav">
-				<li><a href="#" title="Contact Us">Payment</a></li>
-				<li class="active">
-					<a href="service-request.html">Service</a>
-				</li>
-				<li><a href="#">Information</a></li>
-				<li><a href="#">Lease</a></li>
-			</ul>
-		</div>
+		<!-- Dropdown Nav-->
 		<div class="dropdown-nav-contents">
 			<ul class="dropdown-nav">
 				<li>
@@ -74,6 +63,19 @@
 						<li><a href="index.html">Sign Out</a></li>
 					</ul>
 				</li>
+			</ul>
+		</div>
+	
+		<!-- Primary Navigation -->
+		<div class="primary-nav-contents">
+			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
+			<ul class="primary-nav">
+				<li><a href="#" title="Contact Us">Payment</a></li>
+				<li class="active">
+					<a href="service-request.html">Service</a>
+				</li>
+				<li><a href="#">Information</a></li>
+				<li><a href="#">Lease</a></li>
 			</ul>
 		</div>
 		
