--- a/signin-error.html
+++ b/signin-error.html
@@ -37,7 +37,7 @@
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_1.jpg" >
   </div>
-	<script type="text/javascript">global.background.init(); </script><!-- This needs to be here to resize this before the page finishes loading instead of after -->
+  <script src="js/browserimage.js"></script>
   <header>
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
