--- a/make-onetime-payment.html
+++ b/make-onetime-payment.html
@@ -64,37 +64,45 @@
 				</h2>
 				<div class="clearfix">
 					<a href="#" class="right" >See Account History</a>
-					<table class="left" width="550" border="0" cellpadding="0">
-						<tr>
-							<td>Apr 1</td>
-							<td>Balance Forward</td>
-							<td>- $</td>
-							<td>1,800.00</td>
-						</tr>
-						<tr>
-							<td>Apr 1</td>
-							<td>Balance Forward</td>
-							<td>- $</td>
-							<td>1,800.00</td>
-						</tr>
-						<tr>
-							<td>Apr 1</td>
-							<td>Balance Forward</td>
-							<td>- $</td>
-							<td>1,800.00</td>
-						</tr>
-						<tr>
-							<td>Apr 1</td>
-							<td>Balance Forward</td>
-							<td>- $</td>
-							<td>1,800.00</td>
-						</tr>
-						<tr>
-							<td>Apr 1</td>
-							<td>Balance Forward</td>
-							<td>- $</td>
-							<td>1,800.00</td>
-						</tr>
+					<table class="left balance" width="550" border="0" cellpadding="0">
+						<tfoot>
+							<tr>
+								<td colspan="2" class="label">Current Balance</td>
+								<td colspan="2" class="total">$1,837.98</td>
+							</tr>
+						</tfoot>
+						<tbody>
+							<tr>
+								<td>Apr 1</td>
+								<td class="description">Balance Forward</td>
+								<td class="text-right">- $</td>
+								<td class="text-right">1,800.00</td>
+							</tr>
+							<tr>
+								<td>Apr 1</td>
+								<td class="description">Balance Forward</td>
+								<td class="text-right">- $</td>
+								<td class="text-right">1,800.00</td>
+							</tr>
+							<tr>
+								<td>Apr 1</td>
+								<td class="description">Balance Forward</td>
+								<td class="text-right">- $</td>
+								<td class="text-right">1,800.00</td>
+							</tr>
+							<tr>
+								<td>Apr 1</td>
+								<td class="description">Balance Forward</td>
+								<td class="text-right">- $</td>
+								<td class="text-right">1,800.00</td>
+							</tr>
+							<tr>
+								<td>Apr 1</td>
+								<td class="description">Balance Forward</td>
+								<td class="text-right">- $</td>
+								<td class="text-right">1,800.00</td>
+							</tr>
+						</tbody>
 					</table>
 				</div>
 				
