--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	</header>
   	<div role="main" id="main" class="clearfix">
 		<div id="signin" class="titled-box clearfix">
-			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
+			<h1 class="box-title"><a href="dont-have-account.html" class="right body-font-14">Don't have an account yet?</a><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
 			<div class="body-left">
 				<p class="body-font-14">With exclusive access to our resident-only web sites, hop on any computer with Internet access to:</p>
@@ -75,11 +75,18 @@
 					<ul class="form-with-validation">
 						<li>
 							<label for="email">Email address <span class="required">*</span></label>
-							<input type="text" name="email" id="email" value="">
+							<input data-val="true" data-val-required="Email address is required." type="text" name="email" id="email" value="">
+							<span class="ui-state-error-text field-validation-error" data-valmsg-for="email" data-valmsg-replace="true">
+								<span for="email" generated="true" class="" style="">Email address is required.</span>
+							</span>
+						</li>
 						</li>
 						<li>
 							<label for="password">Password <span class="required">*</span></label>
 							<input data-val="true" type="password" data-val-required="Password Is Required" name="password" id="password" tabindex="3" value="">
+							<span class="ui-state-error-text field-validation-error" data-valmsg-for="email" data-valmsg-replace="true">
+								<span for="password" generated="true" class="" style="">Password Is Required.</span>
+							</span>
 						</li>
 					</ul>
 					<div class="submit-area-right">
