--- a/forgot-your-password.html
+++ b/forgot-your-password.html
@@ -56,10 +56,9 @@
 		</div>
 	</header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="titled-box clearfix">
+		<div id="signin" class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
-			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div class="body-font-14 padded">
+			<div class="padded clearfix">
 				<form method="POST" action="we-sent-you-email.html">
 					<h1>Forgot your password?</h1>
 					<p class="form-note">We'll send you a link to reset it.</p><br />
