--- a/dont-have-account.html
+++ b/dont-have-account.html
@@ -57,39 +57,57 @@
   <div role="main" id="main" class="clearfix">
 		<div id="signin" class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
-			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div class="padded body-font-14">
-				<form method="POST" action="select-a-lease.html">
-					<h1>Dont have an account?</h1>
+			<div class="padded clearfix">
+				<form method="POST" action="activation-email-sent.html">
+					<h3 class="discreet">Don't have an account?</h3>
 					<p class="form-note">Please fill out the following information and we'll send you an email to activate your account</p>
 					<ul class="form-with-validation">
-						<li><input type="text" name="email" value="Email Address" class="autoclear"></li>
-						<li><input type="text" name="community" value="Your Community" class="autoclear" id="autocomplete-community"></li>
-						<li><input type="text" name="address" value="Your Address" class="autoclear" id="autocomplete-address"></li>
+						<li>
+							<label for="email">Email Address <span class="required">*</span></label>
+							<input data-val="true" data-val-required="Email Address is required."  tabindex="2" type="text" name="email" id="email" value="">
+							<span class="ui-state-error-text field-validation-error" data-valmsg-for="email" data-valmsg-replace="true">
+								<span for="email" generated="true" class="" style="">Email Address is required.</span>
+							</span>
+						</li>
+						<li>
+							<label for="community">Your Community <span class="required">*</span></label>
+							<input data-val="true" data-val-required="Your Community is required." tabindex="3" type="text" name="community" id="community" value="">
+							<span class="ui-state-error-text field-validation-error" data-valmsg-for="community" data-valmsg-replace="true">
+								<span for="community" generated="true" class="" style="">Your Community is required.</span>
+							</span>
+						</li>
+						<li>
+							<label for="address">Your Address <span class="required">*</span></label>
+							<input data-val="true" data-val-required="Your Address is required." tabindex="4" type="text" name="address" id="address" value="">
+							<span class="ui-state-error-text field-validation-error" data-valmsg-for="address" data-valmsg-replace="true">
+								<span for="address" generated="true" class="" style="">Your Address is required.</span>
+							</span>
+						</li>
 					</ul>
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Send</span><span class="end"> &nbsp; </span></button>
 					</div>
-					<div class="back-to-sign-in">
-						<a href=""><img src="images/icon_back_arrow_teal.png"><span class="sign-in-text">Back to sign in</span></a>
+					<div class="backtosignin">
+						<a href="/"><img src="images/icon_back_arrow_teal.png" alt="Back to sign in"> Back to sign in</a>
 					</div>
 				</form>
 			</div>
-			<p class="box-footer"><span></span></p>
 		</div>
 		
-		<div class="photo-box left clearfix">
-			<p><strong>OPTIONAL</strong><br>MARKETING<br>REAL<br>ESTATE</p>
-			<img src="images/puppy.png" alt="marketing message">
-		</div>
-		
-		<div class="titled-box left clearfix small-box titled-box-right">
-			<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
-			<div class="body clearfix">
-				<a href="#" class="button-droid"> &nbsp; </a>
-				<a href="#" class="button-iphone"> &nbsp; </a>
+		<div class="marketing-boxes">
+			<div class="photo-box left clearfix">
+				<p><strong>OPTIONAL</strong><br>MARKETING<br>REAL<br>ESTATE</p>
+				<img src="images/puppy.png" alt="marketing message">
 			</div>
-			<p class="box-footer"><span></span></p>
+
+			<div class="titled-box left clearfix small-box titled-box-right">
+				<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
+				<div class="body clearfix">
+					<a href="#" class="button-droid"> &nbsp; </a>
+					<a href="#" class="button-iphone"> &nbsp; </a>
+				</div>
+				<p class="box-footer"><span></span></p>
+			</div>
 		</div>
 		
   </div>
