--- a/something-went-wrong.html
+++ b/something-went-wrong.html
@@ -58,42 +58,42 @@
   <div role="main" id="main" class="clearfix">
 		<div id="signin" class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
-			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div class="body-font-14 padded">				
-					<h1>Something went wrong!</h1>
+			<div class="padded clearfix">				
+					<h3 class="discreet">Something went wrong!</h3>
 					<p>
 						We weren't able to confirm all of the information for your myarchstone.com account.				
 					</p>
-					<br />
 					<p>
 						Your leasing office can better help you at:<br>
 						555-555-5555 or email@archstone.com.
 					</p>
-					<div class="back-to-sign-in">
-						<a href=""><img src="images/icon_back_arrow_teal.png"><span class="sign-in-text">Back to sign in</span></a>
+					<br>					
+					<div class="back-arrow">
+					  <a href="/">Back to sign in</a>
 					</div>
-				</div>
-			<p class="box-footer"><span></span></p>
+			</div>	
 		</div>
 		
-		<div class="photo-box left clearfix">
-			<p><strong>OPTIONAL</strong><br>MARKETING<br>REAL<br>ESTATE</p>
-			<img src="images/puppy.png" alt="marketing message">
-		</div>
-		
-		<div class="titled-box left clearfix small-box titled-box-right">
-			<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
-			<div class="body clearfix">
-				<a href="#" class="button-droid"> &nbsp; </a>
-				<a href="#" class="button-iphone"> &nbsp; </a>
+		<div class="marketing-boxes">
+			<div class="photo-box left clearfix">
+				<p><strong>OPTIONAL</strong><br>MARKETING<br>REAL<br>ESTATE</p>
+				<img src="images/puppy.png" alt="marketing message">
 			</div>
-			<p class="box-footer"><span></span></p>
+
+			<div class="titled-box left clearfix small-box titled-box-right">
+				<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
+				<div class="body clearfix">
+					<a href="#" class="button-droid"> &nbsp; </a>
+					<a href="#" class="button-iphone"> &nbsp; </a>
+				</div>
+				<p class="box-footer"><span></span></p>
+			</div>
 		</div>
 		
   </div>
   <footer>
 		<div class="right">
-			<a href="#">ArchstoneApartments.com</a>
+			<a href="/">ArchstoneApartments.com</a>
 		</div>
 		<div class="left-one-row">
 				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
