--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
 	</header>
   	<div role="main" id="main" class="clearfix">
 		<div id="signin" class="titled-box clearfix">
-			<h1 class="box-title"><a href="dont-have-account.html" class="right body-font-14">Don't have an account yet?</a><span>WELCOME TO myARCHSTONE</span></h1>
+			<h1 class="box-title"><a href="dont-have-account.html" class="right">Don't have an account yet?</a><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
 			<div class="body-left">
-				<p class="body-font-14">With exclusive access to our resident-only web sites, hop on any computer with Internet access to:</p>
+				<p>With exclusive access to our resident-only web sites, hop on any computer with Internet access to:</p>
 				<ul>
 					<li>Pay your rent online</li>
 					<li>Submit and track service requests</li>
 					<li>Find community forms and policies</li>
 					<li>And much, much more...</li>
 				</ul>
-				<p class="body-font-14">Log in now to get started!</p>
+				<p>Log in now to get started!</p>
 			</div>
 			<div class="body-right">
 				<form method="POST" action="select-a-lease.html">
-					<h3>Please Sign In</h3>
+					<h3 class="discreet">Sign In</h3>
 					<ul class="form-with-validation">
 						<li>
 							<label for="email">Email address <span class="required">*</span></label>
