css style fixes

--- a/choose-new-password.html
+++ b/choose-new-password.html
@@ -80,8 +80,8 @@
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Use this password and sign in</span><span class="end"> &nbsp; </span></button>
 					</div>
-					<div class="backtosignin">
-						<a href="/"><img src="images/icon_back_arrow_teal.png" alt="Back to sign in"> Back to sign in</a>
+					<div class="back-arrow">
+					  <a href="/">Back to sign in</a>
 					</div>					
 				</form>
 			</div>
