--- a/reset-your-password.html
+++ b/reset-your-password.html
@@ -61,25 +61,25 @@
 				<form method="POST" action="we-sent-you-email.html">
 					<h3 class="discreet">Reset your password</h3>
 					<p class="form-note">Please answer one of your security questions to reset your password.</p>
+					<p>
+						Question<br>
+						<span generated="true">What city were you born in?</span>
+					</p>					
 					<ul class="form-with-validation">
 						<li>
-							Question:<br>
-							What city were you born in?
-						</li>					
-						<li>
-							<label for="securityanswer">Answer<span class="required">*</span></label>
-							<input data-val="true" data-val-required="Confirm New Password is required and must match New Password." id="securityanswer" name="securityanswer" tabindex="1" type="text" value="" class="input-validation-error" />
+							<label for="securityanswer">Answer <span class="required">*</span></label>
+							<input data-val="true" data-val-required="Answer is required." id="securityanswer" name="securityanswer" tabindex="1" type="text" value="" class="input-validation-error" />
 							<span class="ui-state-error-text field-validation-error" data-valmsg-for="securityanswer" data-valmsg-replace="true">
-								<span for="securityanswer" generated="true">Your last answer didn't match the original, please try again.</span>
+								<span for="securityanswer" generated="true">Your answer doesn't match the original. Try it again.</span>
 							</span>
 						</li>
 					</ul>
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Continue</span><span class="end"> &nbsp; </span></button>
 					</div>
-					<div class="backtosignin">
-						<a href="/"><img src="images/icon_back_arrow_teal.png" alt="Back to sign in"> Back to sign in</a>
-					</div>					
+					<div class="back-arrow">
+					  <a href="/">Back to sign in</a>
+					</div>		
 				</form>
 			</div>
 		</div>
