--- a/we-sent-you-email.html
+++ b/we-sent-you-email.html
@@ -57,19 +57,19 @@
   <div role="main" id="main" class="clearfix">
 		<div id="signin" class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
-			<div class="padded clearfix body-font-14">			
+			<div class="padded clearfix">			
 					<h3 class="discreet">We sent you an email</h3>			
 					<p>
-						In the next few minutes you'll receive a link to reset your password.<br>
+						In the next few minutes you'll receive a link to reset your password.
 						Remember to check your spam folder if you don't see it right away.				
 					</p>
-					<br>
 					<p>
 						If you have an issue or don't receive the password email, contact your leasing office at:<br>
 						555-555-5555 or email@archstone.com.
 					</p>
-					<div class="backtosignin">
-						<a href="/"><img src="images/icon_back_arrow_teal.png" alt="Back to sign in"> Back to sign in</a>
+					<br>
+					<div class="back-arrow">
+					  <a href="/">Back to sign in</a>
 					</div>
 			</div>
 		</div>
@@ -88,7 +88,8 @@
 				</div>
 				<p class="box-footer"><span></span></p>
 			</div>
-		</div>		
+		</div>
+		
   </div>
   <footer>
 	  <div class="right">
